--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,47 @@
----
+#############################################################################
+# Pre-commit configuration file to enforce code quality and consistency
+#############################################################################
+
+# Globally exclude pre-commit config and LICENSE files
+exclude: "(^\\.pre-commit-config\\.yaml$|^LICENSE$|^\\.gitignore$)"
+
 repos:
+  # Actionlint: Lint GitHub Actions workflows
   - repo: https://github.com/rhysd/actionlint
     rev: v1.7.7
     hooks:
       - id: actionlint
-  # - repo: https://github.com/adrienverge/yamllint
-  #   rev: v1.35.1
-  #   hooks:
-  #     - id: yamllint
-  #       name: yamllint
-  #       entry: yamllint
-  #       language: python
-  #       files: \.(yml|yaml)$
-  #       args: ["--strict"]
+
+  # Markdownlint: Lint and fix Markdown files
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.43.0
+    rev: v0.44.0
     hooks:
       - id: markdownlint
-        args: ["--fix", "--config", ".markdownlint.json"]
+        args:
+          - "--fix" # Automatically fix issues
+          - "--config" # Use the specified configuration file
+          - .markdownlint.json
+
+  # Flake8: Lint Python code for style and quality issues
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.2.0
+    hooks:
+      - id: flake8
+
+  # Yamllint: Validate and lint YAML files
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.37.0
+    hooks:
+      - id: yamllint
+        exclude: "(^\\.github/workflows/.*)" # Exclude GitHub Actions workflow files
+
+  # Prettier: Format JSON files for consistency
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        args:
+          - "--write" # Automatically format files
+          - "--parser" # Specify the parser to use
+          - json
+        exclude: "(^terraform/.*|^\\.github/workflows/.*|^README.*)" # Exclude terraform folder, GitHub workflows folder, and README
